syntax = "proto3";

package questions;

service QuestionService {
  rpc SearchQuestions(SearchRequest) returns (SearchResponse);
}

message SearchRequest {
  string query = 1;  
  int32 page = 2;    
  int32 limit = 3;   
  string type = 4;   
}


message Block {
  string text = 1;
  bool show_in_option = 2;
  bool is_answer = 3;
}

message Option {
  string text = 1;
  bool is_correct_answer = 2;
}

message Details {
  string anagram_type = 1; // WORD or SENTENCE
  repeated Block blocks = 2;
  string solution = 3;
  repeated Option options = 4;
}

message Question {
  string id = 1;         
  string title = 2;      
  string type = 3;       
  string sibling_id = 4; 
  Details details = 5;   
}

message SearchResponse {
  repeated Question questions = 1; 
  int32 total_pages = 2;           
  int32 current_page = 3;          
}
